Changed landing page functionality

--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -21,7 +21,7 @@
 </table>
 
 <div>
-  <form action="/contacts/index" method="post">
+  <form action="/contacts/add_contact" method="post">
     <input type="text" name="first_name" placeholder="First Name" />
     <input type="text" name="last_name" placeholder="Last Name" />
     <input type="text" name="email" placeholder="E-mail" />
